<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicatie_market"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnAdaugaMarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adauga_market"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/tvListaTitlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_marketuri"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <ListView
        android:id="@+id/listViewMarkets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="12dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false" />

</LinearLayout>